# nff-sdk-c

./: .gitignore  CHANGED.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  NFF-SDK-OPTIMIZATION.md  README.md  SECURITY.md  library.properties
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: PROTOCOL.md  TEST_OTA.md
examples/arduino_basic/: arduino_basic.ino
examples/arduino_bootstrap/: arduino_bootstrap.ino
examples/arduino_onboard/: arduino_onboard.ino
examples/arduino_onboard_wired/: arduino_onboard_wired.ino  build_opt.h  nff_wifi_creds.h
examples/espidf_basic/main/: main.c
include/: nff.h  nff_port.h
nff-power-meter/: .gitignore  README.md  platformio.ini  profile.py
nff-power-meter/docs/: ble-power-budget.tex  ble-power-onepager.tex  datasheet.tex  nff-power-characteristics.tex  nff-power.tex
nff-power-meter/esp32-loadtest/: platformio.ini
nff-power-meter/esp32-loadtest/src/: main.cpp
nff-power-meter/esp32-nffload/: platformio.ini
nff-power-meter/esp32-nffload/include/: wifi_secrets.h.example
nff-power-meter/esp32-nffload/src/: main.cpp
nff-power-meter/src/: main.cpp
src/: nff_claim.c  nff_cmd.c  nff_core.c  nff_crash.c  nff_diag.c  nff_heartbeat.c  nff_internal.h  nff_json.h  nff_mqtt.c  nff_ota.c  nff_security.c  nff_sha256_fallback.h  nff_store.c  nff_store.h
src/port/: nff_port_esp32_arduino.c  nff_port_esp32_idf.c  nff_port_esp8266_arduino.c  nff_port_posix.c
tests/: CMakeLists.txt  test_claim_rollover.c  test_cmd_dispatch.c  test_crash_report.c  test_nonce_ring.c  test_ota_resume.c  test_ota_rollback.c
tools/: gen_credentials.py  install-hooks.ps1  sync_arduino_lib.py
tools/hooks/: post-commit  post-merge
zephyr/: CMakeLists.txt  module.yml  nff_port_zephyr_stub.c
